--- a/index.htm
+++ b/index.htm
@@ -131,9 +131,9 @@ img.emoji {
 <li id="menu-item-166" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-166"><a >Ticwear OS</a></li>
 </ul>
 		<ul id="menu-right" class="main-menu-right">
-			<li style="margin-left:40px;" id="menu-item-171" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-169">
+			<!--<li style="margin-left:40px;" id="menu-item-171" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-169">
 				<a href="../en">English</a>
-			</li>
+			</li>-->
             <li id="menu-item-170" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-169">
                 <a href="#footer">联系我们</a>
             </li>
@@ -184,9 +184,9 @@ img.emoji {
 					<!--<div class="video"><iframe id="slider-video" src="./Dagadam - Think Beyond_files/201644852.html"></iframe></div>-->
 					<div class="video" style="z-index:1"><img src="images/P1.png" alt=""></div>
 					<div class="slide-info">
-	               <span class="title">Data Coin</span>
+	               <span class="title">Energy Chain (ENC)</span>
 	               <p class="content">
-					   基于区块链分布式储存匿名收集信息，Data Coin 是交互性数据共享，共同汇集数据探索出新型数据模型，并将新型数据模型可在服务市场上进行交易，并且不收取任何费用。
+					   Energy Chain 致力于通过社区、第三方开发者和技术上的创新，打造一个在全球具有影响力的开源社区生态，最终目的是将区块链融入到金融、社交、游戏、物联网等不同行业。能量链是有兼容性的生态社会，并且通过融入监管的逻辑，通过POW机制区块链与现实商业社会的桥梁，实现消费增值，让消费者与商家之间建立起健康的生态经济机制。
 </p>
 					<!--<a data-video="201644852" href="http://dagadam.com/#" class="video-link"><svg xmlns="http://www.w3.org/2000/svg" width="41.977" height="41.977" viewBox="0 0 41.977 41.977"><path d="M18.316 15.56l8.526 5.43-8.526 5.41V15.56zm-1.066-3.05c-.544.03-.968.534-.95 1.132v14.692c-.023.877.846 1.43 1.524.968l11.544-7.346c.694-.418.694-1.517 0-1.935l-11.544-7.345c-.173-.118-.372-.175-.574-.164zM20.99 2.1c10.444 0 18.89 8.443 18.89 18.89s-8.445 18.89-18.89 18.89S2.1 31.434 2.1 20.99 10.542 2.1 20.99 2.1zm0-2.1C9.41 0 0 9.41 0 20.99s9.41 20.988 20.99 20.988 20.988-9.41 20.988-20.99S32.568 0 20.988 0z"></path></svg></a>-->
 	          </div></div>
@@ -208,7 +208,8 @@ img.emoji {
 					<div class="content">
 						<p class="title" style="font-size:36px;">项目价值</p>
 						<p>
-							Data Coin 按照数据收集—分析报告—统计分析—数据发掘等一系列科学分析方法，开发的智能合约，实现“一秒总结”为各行业作出最精准的报告，大大方便个人或机构调取和使用，极大地降低了数据分析、采集的时间成本和跨行业的复杂情况。
+							ENC让中国的经营者和消费者所有消费数据都是公开化、透明化，经营者与消费者之间出现任何纠纷都有数据可查。
+项目真正做到让区块链应用商业场景落地，跨界360行。
 </p>
 					</div>
 					<span class="line" style="display: none">DAGADAM - THINK BEYOND</span>
@@ -233,7 +234,8 @@ img.emoji {
 <div class="slide">
 				<p class="title " style='text-align: left;font-size:36px;'>解决的痛点</p>
 				<p class="info "  style='text-align: left;'>
-					人类产生的数据对商业价值是不可估量的，由于探索收集信息的方法隐蔽，导致个人信息泄露，我们通过Data Coin 研发的“无触碰+分布式收集”组件可很好的规避此现象。并且对调用者进行二次隔离验证，保证数据模型输出的安全。
+					ENC通过节点的确认，可以减少商业纠纷，通过POW机制让商家的诚信得到应有的价值，消费者可以更放心的消费。
+ENC不但可以通过区块链技术的可溯源特性为消费者提供安心的消费机制，其突破性的作用在于其可以通过发行代币帮助商家引流并锁定客户，解决商家现有商业机制下的种种经营难题。
 				</p>
 			</div>
 
@@ -257,17 +259,16 @@ img.emoji {
 						</div>
 						<div class="section-info">
 							<!--<p class="section-title">ABOUT THE PROJECT</p>-->
-							<img src="images/logo1.png" alt="" style="width: 140px;">
 							<div class="section-slider">
 								<div class="slider">
 
 									<div class="slide">
 										<div class="content">
-											<p class="title" style="font-size:36px;">Data Coin <br>初步阶段
+											<p class="title" style="font-size:36px;">Energy Chain <br>初步阶段
 											</p>
 											<div class="info ">
 												<p style='text-align: left;'>
-													现与全球热门App“体检宝”达成合作，目前试运行 Data Coin 协议中的组件与调用者的应用流程，将逐步拓展数据对接入口与调用者的关系。 “体检宝”是全球用户最多的医疗工具类APP，全球拥有超过2000万名用户，“体检宝”APP使用手机摄像头、陀螺仪、重力加速度计、话筒等传感器完成用户心率、血压、肺活量、血养等多种健康数据的采集与检测。
+													交易贡献—代币奖励—机构购买—代币消耗 用户产生交易会得到代币奖励。 前期依托于线下经营者与消费者，后期将对接更智能化服务当中。
 												</p>
 											</div>
 										</div>
@@ -289,9 +290,9 @@ img.emoji {
 							<div class="design-slider">
 
 								<div class="slide">
-									<p class="title " style="font-size:36px;text-align: left;">DTC数据币介绍</p>
+									<p class="title " style="font-size:36px;text-align: left;">Energy Chain介绍</p>
 									<p class="info " style="text-align: justify">
-										数据币是于数据交换的区块链协议代币，数据币前期发展依托于“体检宝”APP，后期会逐渐拓展应领域。 </p>
+										ENC是基于经营者和消费者交易产生，Energy Chain 前期依托于线下商铺消费者，后期会逐步拓展应用领域。</p>
 								</div>
 
 							</div>
@@ -830,12 +831,12 @@ Dagadam watch does it for us!</p>
     <div class="logo-footer">
 		<p class="title" style="font-size: 36px; line-height: 40px; color: #FFFFFF">联系我们</p>
     </div>
-    <div class="footer-social-links">
-        <a target="_blank" href="https://twitter.com/dt_coin"  style='background:url(images/footer2.png) center center no-repeat; background-size:contain;'></a>
-        <a target="_blank" href="https://www.facebook.com/Dtcoin-2036709999896933" style='background:url(images/footer3.png) center center no-repeat; background-size:contain;'></a>
-		<a target="_blank"  style='background:url(images/footer1.png) center center no-repeat; background-size:contain;'></a>
-		<a  target="_blank"  style='display:none; background:url(images/footer1.png) center center no-repeat; background-size:contain;'><svg  width="25.477" height="22.436" viewBox="0 0 20.847 20.847"><path d="M17.81 2.018c2.018.053 3.027 1.198 3.037 3.438 0 .147-.005.3-.013.457-.09 1.9-1.502 4.486-4.245 7.76-2.83 3.43-5.23 5.147-7.2 5.156-1.227 0-2.245-1.05-3.062-3.152l-.858-2.88-.848-2.876C3.997 7.838 3.33 6.798 2.616 6.798c-.156 0-.697.304-1.626.91L0 6.538 1.536 5.26 3.046 4C4.4 2.914 5.43 2.328 6.137 2.24c.093-.01.187-.012.283-.012 1.448 0 2.353 1.04 2.708 3.124.198 1.188.362 2.154.495 2.896.13.744.237 1.262.323 1.557.48 1.97.995 2.96 1.55 2.968.426 0 1.082-.642 1.968-1.926.866-1.32 1.332-2.296 1.392-2.932.02-.13.026-.25.026-.362 0-.86-.474-1.29-1.418-1.29-.48 0-.99.102-1.537.3.98-3.022 2.864-4.535 5.65-4.545h.234z"></path></svg></a>
-        <a target="_blank" style="display: none"><svg  width="25.477" height="22.436" viewBox="0 0 20.091 17.545"><path d="M18.732 4.844c-.345-1.33-.837-1.84-2.027-2.024-.686-.098-3.9-.223-6.512-.223-2.614 0-5.865.125-6.552.223-1.19.184-1.905.695-2.25 2.024-.115.446-.345 2.892-.345 3.827v.206c0 .933.248 3.38.364 3.827.344 1.328 1.035 1.84 2.225 2.025.685.096 4 .222 6.612.222 2.614 0 5.915-.125 6.6-.222 1.19-.185 1.534-.697 1.877-2.025.117-.448.32-2.894.32-3.827V8.67c0-.934-.197-3.38-.312-3.826zm-10.9 7.084V5.562l6.18 3.107-6.18 3.258z"></path></svg></a>
+    <div class="">
+	<br/><br/>
+		<p style="font-size: 22px; color: #AAAAAA">官网：<a href="http://www.energychain.org">http://www.energychain.org</a>
+			<br/><br/>
+			邮箱：energychain@sina.com
+		</p>
 
     </div>
     <div class="menu-footer-container" style="display: none"><ul id="menu-footer" class="footer-menu"><li id="menu-item-176" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-176"><a href="http://dagadam.com/#about">About Dagadam</a></li>
