--- a/index.htm
+++ b/index.htm
@@ -832,7 +832,7 @@ Dagadam watch does it for us!</p>
     </div>
     <div class="">
 	<br/><br/>
-		<p style="font-size: 22px; color: #AAAAAA">官网：<a href="http://www.energychain.org">http://www.energychain.org</a>
+		<p style="font-size: 22px; color: #AAAAAA">官网：<a href="http://www.energychain.org">http://www.enchain.cc</a>
 			<br/><br/>
 			邮箱：energychain@sina.com
 		</p>
